# fsrs-rs-nodejs

./: .gitignore  Cargo.toml  README.md  index.cjs  index.d.ts  index.js  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: CI.yml  autofix.yml  lint.yml
.husky/: pre-commit
.idx/: dev.nix
__test__/: index.spec.ts
benchmark/: bench.ts
examples/: migrate.js  optimize.js  schedule.js  train_csv.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  train_task.rs
