[package]
authors      = ["AsukaMinato <i at asukaminato dot eu dot org>"]
edition      = "2024"
name         = "fsrs-rs-nodejs"
rust-version = "1.85.0"
version      = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.fsrs]
version = "4.1.1"
# path = "../fsrs-rs"
# git = "https://github.com/open-spaced-repetition/fsrs-rs.git"
# https://github.com/open-spaced-repetition/fsrs-rs/pull/326
# rev = "9b2f2f72f68e7fbddf1aff3ca0271d6ee26702e6"

[dependencies]
burn-autodiff = "0.18.0"
napi           = { version = "2", features = ['async'] }
napi-derive    = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
